v7.8
-----


v7.7
-----
+ Added a "Launch Random Game" button to the Enhanced Steam menu to launch a random game from your library
+ Added an option to replace SteamOS logo for Linux games on Steam with Tux logo
+ Added highlighting to activity page when curator recommends a game
: Fixed a bug where survey results with 0% satisfaction would be hidden
: Updated platform icons on wishlist pages to match the new store style and layout
: Fixed a bug that would sometimes cause Early Access banners not to display correctly
: Fixed a bug that sometimes caused games not to be able to be removed from your wishlist
: Dynamic Greenlight data will only be pulled if the user is signed in to Steam
: Performance surveys will no longer be displayed on streaming video store pages
: Fixed some layout and formatting issues while browsing the badges page in Binder View
: Fixed a bug where Metacritic scores would sometimes show NaN/100 if score was not found
- Removed Rewards from Playfire section on app pages, as the service has been discontinued

v7.6
-----
+ Added an option to use dynamic data while browsing Greenlight pages
+ Added performance survey data and links to applicable store pages
+ Added Twitch integration to Steam profiles that contain a link to the user's Twitch page
+ Added "Add to Cart" buttons back to wishlist pages
+ Added sorting options to "Friends who play" pages
+ Enhanced Steam will now remember whether you've accepted the SSA when buying and selling items
: Updated and localized Early Access banner images
: Fixed an issue with remaining card drop calculations on badge pages
: Fixed bug that would cause very large wishlists to sometimes crash the browser after loading
: Fixed a bug that caused cart errors when using the "Empty Cart" feature

v7.5.2
-----
+ Added a "Get Help" button to store pages that links to that game's personal support portal
: Updated highlighting for the summer sale home page

v7.5.1
-----
+ Added Blue profile theme by Teliko