@@ -46,6 +46,9 @@
     "dlc_suggest": "Suggest a new category",
     "badge_completion_cost": "Cost of completing badge",
     "loading": "Loading...",
+    "selling": "Selling...",
+    "quick_sell": "Quick Sell for __amount__",
+    "instant_sell": "Instant Sell for __amount__",
     "starting_at": "Starting at",
     "homepage_tabs": "Homepage Tabs",
     "store": "Store",
@@ -274,6 +277,7 @@
         "show_early_access_text": "Show Early Access image banners",
         "author_info": "by jshackles",
         "profile_link_images_gray": "Grayscale",
+        "quickinv": "Show Quick Sale buttons on Steam Community items in inventory",
         "library_f2p": "Show played free to play games and demos in library",
         "inventory_market_text": "Show Market price on inventory page",
         "send_age_info": "Automatically send age verification when requested",
@@ -312,6 +316,9 @@
         "greenlight_banner": "Replace Steam Greenlight banner",
         "dynamicgreenlight": "Use dynamic data while browsing Greenlight",
         "general": "General",
+        "market": "Market",
+        "inventory": "Inventory",
+        "profile": "Profile",
         "show_languagewarning": "Show warning if browsing in a language other than",
         "wishlist": "Items on your wishlist"
     },
