@@ -1,5 +1,6 @@
 v7.8
 -----
++ Added quick sell and instant sell buttons to Steam Community items in inventory
 
 
 v7.7
